environment/blade/bookinfo/overlay/gloo-mesh/baseline/mgmt/patch/enterprise-networking-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: enterprise-networking
  namespace: istio-system
spec:
  hosts:
  - "relay.jad.solo.io"
